Heavy optimizations regarding SIMD in general